--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "dev": "vite --host 0.0.0.0 --port 34000"
+    "dev": "vite --host 0.0.0.0 --port 34000",
+    "docs": "http-server -o ./docs/index.html"
   },
   "devDependencies": {
     "@types/fabric": "^5.3.3",
